<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="OP20_MAIN" Id="{5263888b-69c4-40ed-94ed-8dd5692a3ec1}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM OP20_MAIN
VAR
	OP20_Modeselection_FB: Mode_Selection_Block1;
	
//	OP20_Cycle_Time: Cycle_Time_FB;
	TP_100ms: TP;
	Pulse_100ms: BOOL;
	Times: LREAL;
	Start: BOOL;
	SR40_Vert_servo_not_Home: BOOL;
	Pause: BOOL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[// Function Calling

OP20_Manual();
OP20_AUTOSEQUENCE();
OP20_Error();
OP20_Initialization_Seq();

//MOdeselection From HMI

IF (OP20_GVL.OP20_HMI_AutoMode AND NOT OP20_GVL.OP20_HMI_ManualMOde AND NOT OP20_GVL.OP20_HMI_StepMode) THEN
	OP20_Modeselection_FB.ModeWord:=1;
	ELSIF (NOT OP20_GVL.OP20_HMI_AutoMode AND OP20_GVL.OP20_HMI_ManualMOde AND NOT OP20_GVL.OP20_HMI_StepMode) THEN
		OP20_Modeselection_FB.ModeWord:=2;
	ELSIF  (NOT OP20_GVL.OP20_HMI_AutoMode AND NOT OP20_GVL.OP20_HMI_ManualMOde AND  OP20_GVL.OP20_HMI_StepMode) THEN
		OP20_Modeselection_FB.ModeWord:=3;
    ELSE   
		OP20_Modeselection_FB.ModeWord:=0;
END_IF
	
OP20_Modeselection_FB(
	ModeWord:= , 
	HomeConditionOK:=OP20_HomeConditionOK , 
	OperationEnable:=OP20_AutoSelected AND OP20_Safety_OK , 
	StartPB:=OP20_HMI_Cycle_Start , 
	SafetyAndNOError:= OP20_Safety_OK, 
	ModeAck:=TRUE , 
	HomingINProgress:=OP20_HomeRunning , 
	TempHomeOK:=OP20_Temp_hmeOK , 
	ResetPB:= , 
	AutoSelected=> OP20_AutoSelected, 
	ManualSelected=> OP20_ManualSelected, 
	StepSelected=>OP20_StepSelected , 
	ModeSelAck_Indication=> , 
	StatusDisplay=> , 
	AutoRunning:=OP20_AutoRunning, 
	StepRunning:=OP20_StepRunning , 
	StartEnable:=OP20_StartEnable  , 
	MachineStop:=OP20_Machine_Stop );

(*
IF (OP20_AutoSelected OR OP20_ManualSelected) AND ( NOT OP20_ErrorActive) AND OP20_Safety_OK THEN
	SR20_Vert_servo.bEnable:=TRUE;
ELSE
	SR20_Vert_servo.bEnable:=FALSE;
END_IF

IF NOT SR20_Vert_servo.bAxisHomed THEN
	SR40_Vert_servo_not_Home:=TRUE;
ELSE
	SR40_Vert_servo_not_Home:=FALSE;
END_IF

IF OP20_ErrorActive OR NOT OP20_Safety_OK THEN
	SR20_Vert_servo.bEnable:=FALSE;	
END_IF
	*)
	
	
	//Cycle Time Block
//	OP20_Cycle_Time(Cycle_Start_Bit:= , Pulse_100ms:=Pulse_100ms , Time_In_Sec=>Times , CT_Running=> );
//	OP20_Cycle_Time.Cycle_Start_Bit:=Start;
	
	
	//Pulse Generation 100ms
	TP_100ms(IN:=NOT TP_100ms.Q , PT:=T#100MS , Q=>Pulse_100ms, ET=> );]]></ST>
    </Implementation>
    <LineIds Name="OP20_MAIN">
      <LineId Id="3" Count="63" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>